--- a/255957EmbeddedC.cbp
+++ b/255957EmbeddedC.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="LTTSEmbC" />
+		<Option title="255957EmbeddedC" />
 		<Option pch_mode="2" />
 		<Option compiler="avr-gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/LTTSEmbC.elf" prefix_auto="1" extension_auto="0" />
+				<Option output="bin/Debug/255957EmbeddedC.elf" prefix_auto="1" extension_auto="0" />
 				<Option working_dir="" />
 				<Option object_output="obj/Debug/" />
 				<Option type="5" />
@@ -17,7 +17,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/LTTSEmbC.elf" prefix_auto="1" extension_auto="0" />
+				<Option output="bin/Release/255957EmbeddedC.elf" prefix_auto="1" extension_auto="0" />
 				<Option working_dir="" />
 				<Option object_output="obj/Release/" />
 				<Option type="5" />
@@ -56,6 +56,8 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Extensions />
+		<Extensions>
+			<lib_finder disable_auto="1" />
+		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
